<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">NGNSniffer</string>
    <string name="wifi">Wifi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cellular">Cellular</string>
    <string name="settings_text">Activate or deactivate services to scan environmental channels, accesspoints and devices.</string>
    <string name="gps">GPS Logging</string>
    <string name="activate_wifi">Activate Wifi ...</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="show_heatmap">Show Heatmap</string>
    <string name="wifi_info_title">Current Wifi Connection:</string>
    <string name="wifi_scan_title">Available Wifi Hotspots:</string>
    <string name="bluetooth_info_title">Current Bluetooth Connection:</string>
    <string name="bluetooth_scan_title">Availble Bluetooth Devices:</string>
    <string name="no_wifi_connection">No Wifi Connection</string>
    <string name="no_wifi_hotspot_found">No Wifi Hotspot found</string>
    <string name="activate_bluetooth">Activate bluetooth ...</string>
    <string name="deactivate_bluetooth">Bluetooth deactivated</string>
    <string name="bluetooth_nothing_found">No Bluetooth device found ...</string>
    <string name="stop_scanning">Stop</string>
    <string name="location">Location</string>
    <string name="location_info_title">Your Current Location:</string>"
    <string name="cellular_info_title">Current Cellular Connection:</string>
    <string name="cellular_not_available">Cellular not available</string>
    <string name="cellular_neighboring_cells">Neighboring cells</string>
    <string name="cellular_deactivated">Cellular is deactivated</string>
    <string name="start_collecting">Start Collecting</string>
    <string name="stop_collecting">Stop Collecting</string>
    <string name="signal">Signal</string>
    <string name="description">description</string>
    <string name="save_measurement">Save Measurement</string>
    <string name="toggle_wifi">Show WiFi</string>
    <string name="toggle_gsm">Show GSM</string>
</resources>
