<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:animateLayoutChanges="true"
        android:orientation="horizontal">

        <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
            android:id="@+id/scan_fragment_bluetooth_progress"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/primary_dark"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textAppearance="@android:style/TextAppearance.Large" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/primary_light" />

    <LinearLayout
        android:id="@+id/scan_fragment_bluetooth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/scan_fragment_bluetooth_info_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_info_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/scan_fragment_bluetooth_info_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small" />

        <TextView
            android:id="@+id/scan_fragment_bluetooth_scan_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/bluetooth_scan_title"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/scan_fragment_bluetooth_scan_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Small" />
    </LinearLayout>


</LinearLayout>